--- a/src/_sass/ztna-landing.scss
+++ b/src/_sass/ztna-landing.scss
@@ -40,19 +40,14 @@
   padding-bottom: 100px;
 }
 
-.ztna-nist-container-fluid {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 40px;
-  overflow-x: scroll;
-  scroll-behavior: smooth;
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
+// .ztna-nist-container-fluid {
+//   width: 100%;
+//   padding-right: 15px;
+//   padding-left: 15px;
+//   margin-right: auto;
+//   margin-left: auto;
+//   margin-bottom: 40px;
+// }
 
 .ztna-post-container {
   display: flex;
@@ -145,6 +140,14 @@
 
   .mobile-nist-illustration {
     display: block;
+    .scroll-wrapper {
+      width: 100%;
+      overflow-x: scroll;
+      scroll-behavior: smooth;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
   }
 
   .ztna-nist-section-wrapper {
