--- a/src/_sass/ztna-spacers.scss
+++ b/src/_sass/ztna-spacers.scss
@@ -235,6 +235,10 @@
 
   .mb-70-100-70 {
     margin-bottom: 40px !important;
+
+    .mb-md-40-30 {
+      margin-bottom: 30px !important;
+    }
   }
 }
 
@@ -330,6 +334,10 @@
 
   .mb-70-100-70 {
     margin-bottom: 70px !important;
+  }
+
+  .mb-md-40-30 {
+    margin-bottom: 40px !important;
   }
 }
 
